@@ -1,9 +1,16 @@
 buildscript {
 	repositories {
         mavenCentral()
+		maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
 	}
 	dependencies {
+<<<<<<< Updated upstream
 		classpath 'io.github.fvarrui:javapackager:1.6.3'
+=======
+		classpath 'io.github.fvarrui:javapackager:1.7.5'
+>>>>>>> Stashed changes
 	}
 }
 
@@ -17,6 +24,13 @@ apply plugin: 'io.github.fvarrui.javapackager.plugin'
 
 dependencies {
     implementation 'commons-io:commons-io:2.6'
+    implementation 'org.openjfx:javafx-base:22'
+    implementation 'org.openjfx:javafx-base:22:win'
+    implementation 'org.openjfx:javafx-controls:22'
+    implementation 'org.openjfx:javafx-controls:22:win'
+    implementation 'org.openjfx:javafx-graphics:22'
+    implementation 'org.openjfx:javafx-graphics:22:win'
+    implementation fileTree(include: ["*.jar"], dir: "libs")
 }
 
 import io.github.fvarrui.javapackager.gradle.PackageTask;
@@ -40,9 +54,19 @@ javapackager {
 task packageForWindows(type: PackageTask, dependsOn: build) {
 	description = 'Packages the application as a native Windows executable and bundles it in a zipball'
 	platform = 'windows'
+	vmArgs = [
+            '--module-path=libs',
+            '--add-modules=javafx.graphics,javafx.controls,javafx.base',
+	]
 	winConfig {
+<<<<<<< Updated upstream
 		exeCreationTool = 'winrun4j'
 		vmArgs = ["-Dprism.maxvram=512m -XX:+UseG1GC"]
+=======
+		headerType = 'console'
+		exeCreationTool = 'launch4j'
+		//vmArgs = ["-Dprism.maxvram=512m -XX:+UseG1GC"]
+>>>>>>> Stashed changes
 		generateSetup = false
 		generateMsi = false
 		registry = new Registry([
@@ -56,12 +80,14 @@ task packageForWindows(type: PackageTask, dependsOn: build) {
 			]
 		])
         icoFile = file("windows/HelloWorldGradle.ico")
+        /*
         setupMode = SetupMode.askTheUser
         removeOldLibs = true
         disableDirPage = false
         disableFinishedPage = false
         disableWelcomePage = false
         createDesktopIconTask = false
+        */
     }
 }
 
